Replace all instances of the old name.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Two-Corner Tile Solitiare</title>
+    <title>Unicode Mahjong Tile Solitiare</title>
     <meta
       name="description"
-      content="A simple web adaptation of Nikakudori Mahjong Solitaire."
+      content="Mahjong Tile Solitaire using the system Unicode font."
     />
     <meta
       name="viewport"
