--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#6c9382" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <link rel="mask-icon" href="/icon-safari-pinned-tab.svg" color="#6c9382">
